--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,10 +46,15 @@ dependencies:
   image_picker: ^1.0.7
   styled_divider: ^1.0.5
   dropdown_button2: ^2.3.9
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.3
+  build_runner: ^2.1.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
