--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,16 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.16.0
+  firebase_core: ^2.29.0
+  firebase_auth: ^4.19.1
   cloud_firestore: ^4.14.0
   firebase_database: ^10.4.5
-  firebase_storage: ^11.6.5
+  firebase_storage: ^11.7.1
   image_picker: ^1.0.7
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   get: ^4.6.6
   google_fonts: ^6.2.1
+  cached_network_image: ^3.3.1
+  permission_handler: ^11.3.1
 
 
 dev_dependencies:
