--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_fonts: ^6.2.1
   cached_network_image: ^3.3.1
   permission_handler: ^11.3.1
+  carousel_slider: ^4.2.1
 
 
 dev_dependencies:
