--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cached_network_image: ^3.3.1
   permission_handler: ^11.3.1
   carousel_slider: ^4.2.1
+  uuid: ^4.4.0
 
 
 dev_dependencies:
