--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   uuid: ^4.4.0
   intl: ^0.19.0
   permission_handler: ^11.3.1
+  line_icons: ^2.0.3
 
 dev_dependencies:
   flutter_test:
