--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.mainSociavism</string>
+	<string>com.findmyngo.app</string>
 	<key>PROJECT_ID</key>
 	<string>main-proj-app</string>
 	<key>STORAGE_BUCKET</key>
