--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,14 @@ dev_dependencies:
   hive_generator: ^1.1.3
   build_runner: ^2.1.11
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: "assets/foreground-logo.png"
 
 flutter:
   uses-material-design: true
