--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   intl: ^0.19.0
   permission_handler: ^11.3.1
   line_icons: ^2.0.3
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   flutter_test:
