--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "A new Flutter project."
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.2
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -43,9 +43,10 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/logo.png"
+  image_path: "assets/icon2.png"
   adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: "assets/foreground-logo.png"
+  adaptive_icon_foreground: "assets/icon2.png"
+  remove_alpha_ios: true
 
 flutter:
   uses-material-design: true
